# skills-trending-monitor

./: .gitignore  README.md  SECURITY_AUDIT.md  pyproject.toml
cronjobs/: skills-trending-monitor-cron
src/: __init__.py  config.py  crawler.py  main.py  notifier.py  storage.py
tests/: test_notifier.py  test_parser.py  test_storage.py
