[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-trending-monitor"
version = "0.1.0"
description = "Crawl https://skills.sh/trending, dedupe store and report new skills via Discord webhook"
requires-python = ">=3.11"
authors = [
  {name = "OpenClaw Assistant"}
]
readme = "README.md"
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "python-dateutil>=2.9"
]

[project.scripts]
skills-trending-monitor = "src.main:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

